# topt-rewrites

./: .gitignore  README.md  mucking_around.ipynb  pyproject.toml  rewrites.py
topt_rewrites/: clifford.py  gadgetisation.py  main.py  normal_form.py  utils.py
topt_rewrites/tests/: cnot_t_0.qasm  cnot_t_4.qasm  test_clifford_synth.py  test_rewrites.py
topt_rewrites/tests/qasm/: cnot_t_0.qasm  cnot_t_2.qasm
