[tool.poetry]
name = "topt_rewrites"
version = "0.1.0"
description = ""
authors = ["CalMacCQ <93673602+CalMacCQ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytket = "^1.27.0"
pytket-offline-display = "^0.0.6"
ruff = "^0.4.4"
qiskit = "^1.1.0"
pytket-qiskit = "^0.53.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]
